PDSA-1765 ta dando um null nada a ver